--- a/style.css
+++ b/style.css
@@ -12,7 +12,6 @@ body {
     color: white;
     display: flex;
     justify-content: space-between;
-    
     padding: 48px;
 }
 
@@ -69,15 +68,81 @@ img {
     padding: 8px 16px;
 }
 
-.container .info {
+.container {
     display: flex;
     justify-content: center;
-    gap: 48px;
-    padding: 32px 52px;
+    gap: 52px;
+    padding: 34px 58px;
 }
 
-.container img{
-    width: 200px;
-    height: 200px;
+.container img {
+    width: 150px;
+    height: 150px;
 }
+
+.info {
+    max-width: 200px;
+}
+
+.quote {
+    background-color: #e5e7eb;
+    font-style: italic;
+    font-weight: 36px;
+    color: #1f2937;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    padding: 36px;
+}
+
+.quoter {
+    text-align: right;
+    font-style: normal;
+    font-weight: 300;
+    font-size: 22px;
+}
+
+.bottom {
+    background: #3882f6;
+    color: #f9faf8;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 34px;
+    margin: 100px;
+    padding: 32px 58px;
+    border-radius: 8px;
+}
+
+button {
+    cursor: pointer;
+    padding: 8px 16px;
+    background: #3882f6;
+    color: #f9faf8;
+    border: 1px solid #f9faf8;
+    border-radius: 8px;
+    font-size: 16px;
+}
+
+.footer {
+    background-color: #1f2937;
+    color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 48px;
+    
+}
+
+.extra{
+    font-weight: 900;
+}
+
+.extra p {
+    font-weight: 300;
+}
+    
+
+
 
